--- a/dev-resources/public/css/style.css
+++ b/dev-resources/public/css/style.css
@@ -50,10 +50,11 @@ body {
 
 .header {
   width: 100%;
+  top: 0px;
   height: 56px;
   color: #FFF;
   background: #3A3A3A;
-  position: absolute;
+  position: fixed;
   font-size: 20px;
   box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 2px 9px 1px rgba(0, 0, 0, 0.12), 0 4px 2px -2px rgba(0, 0, 0, 0.2);
   padding: 16px 16px 0 16px;
@@ -264,7 +265,9 @@ body {
 }
 
 .alert.active {
-    height: 100%;
+    height: 36px;
+    position: relative;
+    top: 56px;
 }
 
 .alert {
@@ -415,23 +418,31 @@ body {
             transform: rotate(90deg); } }
 
 .main {
-  padding-top: 60px;
+  /*padding-top: 60px;*/
+  width: 100%;
   height: 100%;
-  padding-bottom: 60px;
+  position: absolute;
+  z-index: 0;
+  left: 0;
+  /*padding-bottom: 60px;
   padding-right: 20px;
   -webkit-box-flex: 1;
   -webkit-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  overflow-x: hidden;
+  overflow-x: hidden;*/
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   /* transition: margin-left .5s; */
 }
 
-/*.main.sidebar-active {
-    margin-left: 250px;
-}*/
+.sidebar-active {
+    background: rgba(0,0,0,0.5);
+    z-index: 1;
+    height: 100%;
+    position: fixed;
+    width: 100%;
+}
 
 .dialog-container {
   background: rgba(0, 0, 0, 0.57);
@@ -491,7 +502,7 @@ body {
 
 .card {
   padding: 16px;
-  left: 10px;
+  top: 56px;
   position: relative;
   box-sizing: border-box;
   background: #fff;
@@ -499,7 +510,7 @@ body {
   margin: 16px;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); }
 
-#card__delete-button {
+.card__delete-button {
     float: right;
     font-size: 0;
     width: 30px;
@@ -618,8 +629,10 @@ body {
 	height: 32px;
 }
 
-.card__spinner {
-    height: 32px;
+.command .card__loading {
+  background: url('../images/loading.svg') center center no-repeat;
+  width: 32px;
+  height: 32px;
 }
 
 .card__pass > .card__spinner, .card__fail > .card__spinner {
